tests/bug_detector_tests/shadowingVarVar1.js
// first x is shadowed
var x = 1, x = 2;
x + 3;